--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,11 +1,11 @@
 <main>
     <nav>
         <ul>
-            <li class="nosotros"><a href=""> Nosotros</a></li>
-            <li class="servicios"> <a  href="">Servicios</a></li>
+            <li class="nosotros"><a href="inicio#nosotros"> Nosotros</a></li>
+            <li class="servicios"> <a href="inicio#servicios">Servicios</a></li>
             <li class="titulo"> <a  href=""><img src="/titulo.png" alt=""></a></li>
             <li class="buscar"> <input  type="text" placeholder="Buscar"></li>
-            <li class="contacto"> <a  href="">Contacto</a></li>
+            <li class="contacto"> <a  href="inicio#contacto">Contacto</a></li>
             <li class="banderaperu"> <a href=""><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
             <li class="eeuubandera"> <a href=""><img class="imgeeuu"  src="/eeuubandera.png" alt=""></a></li>
             <li class="whatsapp"> <a href=""><img class="imgwhatsapp" src="/whatsapp.jpg" alt=""></a></li>
@@ -17,9 +17,9 @@
         <img class="titulo-2" src="/principal/titulo-sinfondo.png" alt="">
     </header>
 </main>
-<app-servicios></app-servicios>
+<app-servicios id="servicios"></app-servicios>
 <app-servicios2></app-servicios2>
-<app-nosotros></app-nosotros>
+<app-nosotros id="nosotros"></app-nosotros>
 <app-galeria></app-galeria>
 <app-blog></app-blog>
-<app-footer></app-footer>
+<app-footer id="contacto"></app-footer>
