--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -1,125 +1,89 @@
-main{
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    position: relative;
-    width: 100%;
-    height: 100vh;
 }
+
 img{
-    width: 100%;
+    width: 10%;
 }
-a{
-    color: black;
-    text-decoration: none;
-    width: 100%;
-    height: 100%;
+li{
+    height: 80px;
+    border-right: 3px solid rgb(0, 0, 104);
+}
+.nosotros, .servicios, .contacto{
+    width: 8%;
+}
+.titulo{
+    width: 18%;
+}
+.titulo a{
+    margin: 0 30px;
+}
+.buscar{
+    width: 46%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-a:hover{
-    color: white;
-    background-color: #022454;
+.banderaperu, .eeuubandera, .whatsapp{
+    width: 4%;
 }
-ul{
-    background-color: white;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
-    height: 60px;
+.banderaperu a img, .eeuubandera a img {
+    width: 20px;
 }
-li{
+
+input{
+    width: 90%;
+    height: 30px;
+    border-radius: 25px;
+    border: 1px solid gray;
+}
+a{
     display: flex;
+    height: 100%;
     align-items: center;
-    border-right: solid #022454 5px;
+    justify-content: center;
+    color: black;
+    text-decoration: none;
 }
-.servicios{
-    width: 10%;
+a:hover{
+    background-color: rgb(19, 19, 107);
+    color: white;
 }
-.nosotros{
-    width: 10%;
+header .fondo{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
 }
-.titulo{
-    width: 20%;
+li a img{
+    width: 100%;
+    height: auto;
 }
-.titulo a{
+
+header{
+    width: 100%;
+    position: relative;
+    height: calc(100vh - 80px);
+}
+header img{
+    position: absolute;
+}
+
+header .transparencia{
+    position: absolute;
     width: 100%;
     height: 100%;
-}
-.titulo a:hover{
-    background-color: white;
-}
-.titulo img{
-    width: auto;
-    height: 90%;
-}
-.buscar{
-    width: 40%;
-}
-.buscar input{
-    margin-left: 20px;
-    width: 90%;
-    height: 80%;
-    border-radius: 25px;
-    border: 1px solid #c2c2c2;
-}
-.buscar input::placeholder{
-    color: black;
-}
-
-.contacto{
-    width: 10%;
-}
-.banderaperu{
-    width: 5%;
-}
-
-.eeuubandera{
-    width: 5%;
-}
-
-.whatsapp{
-    width: 5%;
-}
-
-.imgperu{
-    width: 20px;
-}
-.imgeeuu{
-    width: 20px;
-}
-.imgwhatsapp{
-    width: 30px;
-}
-header {
-  position: relative; /* Posiciona el header de forma relativa */
-  width: 100%;
-  height: calc(100vh - 60px); /* Calcula la altura restando la del nav */
-}
-.fondo {
-    position: absolute; /* Posiciona la imagen de fondo de forma absoluta */
-    top: 0; /* Ubica la imagen en la parte superior */
-    left: 0; /* Ubica la imagen en la izquierda */
-    width: 100%; /* Ocupa el ancho completo del header */
-    height: 100%; /* Ocupa el alto completo del header */
-    object-fit: cover;
-}
-.transparencia{
-    position: absolute; /* Posiciona la imagen de fondo de forma absoluta */
-    top: 0; /* Ubica la imagen en la parte superior */
-    left: 0; /* Ubica la imagen en la izquierda */
-    width: 100%; /* Ocupa el ancho completo del header */
-    height: 100%; /* Ocupa el alto completo del header */
-    object-fit: cover;
-    background-color: rgba(1, 18, 42, 0.5);
     z-index: 10;
+    background-color: rgba(0, 31, 170, 0.308);
 }
-header .titulo-2{
-    position: absolute;
-    width: 500px;
+
+header .titulo-2 {
     bottom: 0;
     right: 0;
-    margin: 30px;
+    width: 30%;
+    margin: 20px;
     z-index: 20;
 }
