--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -3,7 +3,7 @@
         <ul>
             <li class="nosotros"><a href="inicio#nosotros"> Nosotros</a></li>
             <li class="servicios"> <a href="inicio#servicios">Servicios</a></li>
-            <li class="titulo"> <a  href=""><img src="/titulo.png" alt=""></a></li>
+            <li class="titulo"> <a  href=""><img class="imgtitulo" src="/titulo.png" alt=""></a></li>
             <li class="buscar"> <input  type="text" placeholder="Buscar"></li>
             <li class="contacto"> <a  href="inicio#contacto">Contacto</a></li>
             <li class="banderaperu"> <a href=""><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
@@ -17,6 +17,7 @@
         <img class="titulo-2" src="/principal/titulo-sinfondo.png" alt="">
     </header>
 </main>
+
 <app-servicios id="servicios"></app-servicios>
 <app-servicios2></app-servicios2>
 <app-nosotros id="nosotros"></app-nosotros>
