--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -4,6 +4,7 @@ ul{
     margin: 0;
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 img{
@@ -11,7 +12,7 @@ img{
 }
 li{
     height: 80px;
-    border-right: 3px solid rgb(0, 0, 104);
+    border-right: 3px solid #18437F68;
 }
 .nosotros, .servicios, .contacto{
     width: 8%;
@@ -50,7 +51,7 @@ a{
     text-decoration: none;
 }
 a:hover{
-    background-color: rgb(19, 19, 107);
+    background-color: #18437F;
     color: white;
 }
 header .fondo{
@@ -77,7 +78,7 @@ header .transparencia{
     width: 100%;
     height: 100%;
     z-index: 10;
-    background-color: rgba(0, 31, 170, 0.308);
+    background-color: #18437f62;
 }
 
 header .titulo-2 {
