--- a/src/app/components/servicios/servicios.component.css
+++ b/src/app/components/servicios/servicios.component.css
@@ -1,44 +1,61 @@
-main {
+main{
     width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-}
-h2{
-    height: 70px;
-    margin: 0 50px;
-    padding: 20px;
-    box-sizing: border-box;
-}
-swiper-container {
-    width: 100%; /* Ajusta el ancho del contenedor swiper según tu diseño */
 }
 
-swiper-slide {
-    
+.slider-info{
+    margin: 40px;
 }
 
-img {
-    width: 98%; /* Calcula el ancho de la imagen con margen */
-    height: auto;
-    margin-bottom: 10px; /* Margen inferior entre la imagen y el texto */
+header{
+    width: 100%;
+    height: 100%;
 }
 p{
-    width: 50%;
-    margin: 10px 50px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    height: 80px;
+    overflow: auto;
 }
- button{
-    font-weight: bold;
-    margin-bottom: 50px;
-    width: 150px;
-    margin: 10px 50px;
-    height: 45px;
-    border-radius: 50px;
-    border: 0px; 
-    color: white;
-    background-color: #022454;
-  }
+h2{
+    margin: 40px 50px;
+}
+swiper-slide h2{
+    margin: 0;
+    padding: 0;
+    height: 60px;
+}
+img{
+    width: 100%;
+}
+swiper-container{
+    width: 100%;
+    height: 100%;
+}
 
-button:hover{
+swiper-slide{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin-left: 15px;
+}
+
+button{
+    width: 200px;
+    height: 45px;
+    border-radius: 25px;
+    bottom: solid;
+    background-color: #18437F;
     color: white;
-    background-color: #1e5bb1;
-  }
+    font-weight: bold;
+    border: 0px;
+    margin-top: 20px;
+}
+button:hover{
+    background-color: #AFD0FE;
+    color: #18448F;
+}
