--- a/src/app/components/servicios2/servicios2.component.css
+++ b/src/app/components/servicios2/servicios2.component.css
@@ -1,33 +1,50 @@
+main {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #86B9F7;
+}
+
+.panel-1, .panel-2 {
+    width: 45%;
+    align-content: center;
+    height: 90%;
+}
+
+.panel-1 .img, .panel-2 .img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
 img{
     width: 100%;
+    height: 100%;
+}
+p{ 
+   margin: 2px;
+   margin-bottom: 20px;
 }
 
-main{
-    display: flex;
-    background-color: #86B9F7;
-    font-family: Arial, Helvetica, sans-serif;
-    justify-content: center;
+h2{
+    color: #18437F;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
-div{
-    width: 700px;
-    margin: 50px 10px;
-}
-h4{
-    font-size: 25px;
-    color: #003575;
-}
+
 button{
-    font-weight: bold;
-    margin-bottom: 50px;
-    width: 150px;
-    height: 45px;
-    border-radius: 50px;
-    border: 0px; 
+    border-radius: 25px;
+    width: 200px;
+    height: 35px;
+    background-color: #18437F;
     color: white;
-    background-color: #022454;
-  }
+    border: 0px;
+}
 
 button:hover{
-    color: white;
-    background-color: #1e5bb1;
-  }
+    background-color: #AFD0FE;
+    color: #18448F;
+}
