Preciso v3 Pagina web

--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="contenido"><h1>BLOG</h1>
 
-            <swiper-container slides-per-view="0" autoplay="true" speed="400" navigation="true" [slidesPerView]="4" pagination="true"  [loop]="true" [loopAdditionalSlides]="0">
+            <swiper-container slides-per-view="0" autoplay="true" speed="300" [slidesPerView]="4.2" pagination="true"  [loop]="true" [loopAdditionalSlides]="0">
                 <swiper-slide>
                     <img src="/blog/1.jpg" alt="">
                     <p class="date">03/12/2024</p>
