--- a/src/app/components/nosotros/nosotros.component.html
+++ b/src/app/components/nosotros/nosotros.component.html
@@ -1,41 +1,48 @@
-<main>
-    <div class="background-image">
-        <img src="/nosotros/nosotrosfondo.jpg" alt="">
-    </div>
-    <div>
-        <div class="contenido">
-            <div>
-        <h4>NOSOTROS</h4>
-        <p>Somos una empresa peruana de ingeniería que cuenta con un equipo de trabajadores competentes en el mercado, con amplia experiencia en el sector eléctrico, dedicada a brindar soluciones integrales de instalaciones eléctricas en BT y MT.</p>
-        </div>
-        <swiper-container slides-per-view="0" autoplay="true" speed="400" navigation="true" [slidesPerView]="3" pagination="true"  [loop]="true" [loopAdditionalSlides]="0">
-            <swiper-slide>
-                <img src="/nosotros/seguridad.jpg" alt="">
-                <h5>SEGURIDAD</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
-            </swiper-slide> 
-            <swiper-slide>
-                <img src="/nosotros/innovacion.jpg" alt="">
-                <h5>INNOVACION</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
-            </swiper-slide>  
-            <swiper-slide>
-                <img src="/nosotros/trabajoenequipo.jpg" alt="">
-                <h5>TRABAJO EN EQUIPO</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
-            </swiper-slide>
-            <swiper-slide>
-                <img src="/servicios/4.jpg" alt="">
-                <h5>TRABAJO GRUPAL</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
-            </swiper-slide> 
-            <swiper-slide>
-                <img src="/servicios/5.jpg" alt="">
-                <h5>MARKETING</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
-            </swiper-slide>
-        </swiper-container>
-        <button>Saber mas</button>
-        </div>
-    </div>
-</main>
+<header>
+    <img class="fondo" src="/nosotros/nosotrosfondo.jpg" alt="">
+    <div class="caja"></div>
+    <main>
+            <div class="contenido">
+                <h2>Nosotros</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quasi corporis architecto asperiores aliquam nemo quo iure omnis laborum dolore nostrum, doloremque odit quis velit nulla est consectetur vitae! Voluptates.</p>
+            </div>
+            <swiper-container slides-per-view="1" autoplay="true" speed="400" [slidesPerView]="3"  [loop]="true" [loopAdditionalSlides]="3">
+                <swiper-slide>
+                    <img src="/nosotros/innovacion.jpg" alt="">
+                    <div class="slider-info">
+                    <h4>SEGURIDAD</h4>
+                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, porro natus. Illum beatae dolor error in ad voluptatem consectetur nesciunt quos Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis provident asperiores pariatur nihil, vitae iusto reiciendis, delectus sed consectetur, corrupti doloribus! Minima incidunt vel quia aut quo vero odit tempora. recusandae officia, cum minus alias magni nemo, quam nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                    </div>
+                </swiper-slide> 
+                <swiper-slide>
+                    <img src="/nosotros/seguridad.jpg" alt="">
+                    <div class="slider-info">
+                    <h4>INNOVACION</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                    </div>
+                </swiper-slide>  
+                <swiper-slide>
+                    <img src="/nosotros/trabajoenequipo.jpg" alt="">
+                    <div class="slider-info"><h4>TRABAJO EN EQUIPO</h4>
+                    <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur incidunt laborum nulla vero? Ipsa officiis dolorem placeat, accusantium doloribus rem. Nihil saepe nostrum pariatur, sint quae aliquam minima dolores vitae! ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam illum a velit voluptatum suscipit. Eum veniam culpa optio aperiam ab placeat minus adipisci sequi illo. Atque maxime rerum a laudantium!</p>
+                    </div> 
+                </swiper-slide>
+                <swiper-slide>
+                    <img src="/nosotros/innovacion.jpg" alt="">
+                    <div class="slider-info">
+                    <h4>TRABAJO Y SEGURIDAD</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                    </div>
+                </swiper-slide> 
+                <swiper-slide>
+                    <img src="/nosotros/seguridad.jpg" alt="">
+                    <div class="slider-info"> <h4>ANALSIS DE PERSONAL</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                    </div>
+                </swiper-slide>
+            </swiper-container>
+            <div class="boton">
+                <button>Saber mas</button>
+            </div>
+    </main>
+</header>
