--- a/src/app/components/galeria/galeria.component.css
+++ b/src/app/components/galeria/galeria.component.css
@@ -1,33 +1,52 @@
-.container-galeria {
-    width: 90%;
-    margin: 0 auto; /* Centra el contenedor horizontalmente */
-    padding: 20px; /* Espaciado interno */
+.container-galeria{
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    display: flex;
+    flex-direction: column; 
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.container-galeria h2 {
-    text-align: center; /* Centra el texto */
-    margin-bottom: 20px; /* Espacio inferior */
-    color: rgb(51, 51, 155);
-}
 
-.row {
+h2{
+    margin: 0;
+    border: 0;
+    padding: 0;
     display: flex;
-    justify-content: center; /* Centra los elementos horizontalmente */
-    margin-bottom: 20px; /* Espacio inferior entre filas */
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    width: 100%;
 }
 
-.row img {
-    width: 20%; /* Tamaño de las imágenes */
-    height: 250px; /* Tamaño de las imágenes */
+.row{
+    display: flex;
+    width: 100%;
+    height: 45%;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+
+
+
+
+img{
+    width: 20%;
+    height: 80%;
+    border-bottom: 20px solid rgb(0, 0, 0);
     object-fit: cover;
-    margin: 0px 20px;
+    box-sizing: border-box;
 }
-
 
 .img{
-    border-bottom: 10px solid rgb(0, 23, 128); /* Borde con grosor de 10px */
+    border-bottom: 20px solid #18437F; 
+    position: relative;
 }
 .img2{
-    border-bottom: 10px solid rgb(190, 86, 0); /* Borde con grosor de 10px */
+    border-bottom: 20px solid #E16120;
+    position: relative;
+    transition: 2000ms;
 }
+
