--- a/src/app/components/nosotros/nosotros.component.css
+++ b/src/app/components/nosotros/nosotros.component.css
@@ -1,78 +1,86 @@
+header{
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    display: flex;
+}
+.fondo{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+}
+
+p,h2,h4{
+    margin: 0;
+    padding: 0;
+    height: 3em;
+    overflow: auto;
+    color: white;
+}
+swiper-slide p{
+    height: 5em;
+}
+h2{
+    height: 1.5em;
+    color: #3d7dd6;
+}
+
+h4{
+    color: #398cff;
+}
+
+.caja{
+    width: 20%;
+    height: 100%;
+}
+
+main{
+    width: 80%;
+    height: 100%;
+    background-color: #022454b7;
+    box-sizing: border-box;
+}
+
 img{
-    width: 200px;
-    height: 250px;
+    width: 100%;
+    height: 80%;
     object-fit: cover;
 }
-swiper-container{
-    margin: 50px;
-    width: 1000px;
-}
-swiper-slider{
-    margin: 40px;
-}
-main {
-    position: relative;
-    width: 100%;
-    overflow: hidden; /* Para ocultar cualquier posible desbordamiento */
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    display: flex;
+
+.contenido{
+    height: 15vh;
+    box-sizing: border-box;
+    padding: 1vh 2vw;
 }
 
-.background-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* Coloca la imagen detrás del contenido */
+swiper-slide{
+    box-sizing: border-box;
+    height: 60vh;
+    padding: 1.5vh;
 }
 
-.background-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Para que la imagen cubra todo el contenedor */
+.boton{
+    text-align: center;
+    padding: 10vh 0;
 }
 
-.contenido {
-    margin-left: 500px;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    background-color: rgba(0, 46, 110, 0.5); /* Color de fondo con transparencia */
-}
-
-h4 {
-    color: #2a8af8;
-    margin-top: 0; /* Elimina el margen superior predeterminado del h4 */
-    font-size: 24px; /* Tamaño de fuente del título */
-    font-weight: bold; /* Texto en negrita */
-}
-
-p {
-    margin-bottom: 0; /* Elimina el margen inferior predeterminado del párrafo */
-    font-size: 16px; /* Tamaño de fuente del párrafo */
-    line-height: 1.5; /* Espaciado entre líneas del párrafo */
-}
 button{
-    font-weight: bold;
-    margin-bottom: 50px;
     width: 150px;
-    margin: 10px 50px;
-    height: 45px;
-    border-radius: 50px;
-    border: 0px; 
-    color: white;
+    height: 40px;
+    border-radius: 25px;
+    border: 0;
     background-color: #022454;
-  }
+    color: white;
+    font-weight: bold;
+}
 
 button:hover{
     color: #022454;
-    background-color: #ffff;
-  }
-  h5{
-    font-size: 20px;
-    color: #2a8af8;
-  }
+    background-color: white;
+}
+
+swiper-container{
+    width: 80%;
+    height: auto;
+}
