categoria servicios corregido 25-06-2024 12:26

--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,5 +1,5 @@
 <main>
-    <h2>NUESTROS SERVICIOS</h2>
+    <h2 class="titulo">NUESTROS SERVICIOS</h2>
     <header>
         <swiper-container slides-per-view="1" autoplay="true" speed="400" [slidesPerView]="2.4"  [loop]="true" [loopAdditionalSlides]="2">
             <swiper-slide>
