--- a/src/app/components/servicios/servicios.component.css
+++ b/src/app/components/servicios/servicios.component.css
@@ -6,56 +6,59 @@ main{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.slider-info{
-    margin: 40px;
-}
+img{
+    width: 100%;
 
-header{
-    width: 100%;
-    height: 100%;
 }
-p{
-    width: 100%;
+h2, p{
     margin: 0;
     padding: 0;
-    height: 80px;
+    border:0;
     overflow: auto;
 }
 h2{
-    margin: 40px 50px;
+    display: flex;
+    align-items: center;
+    height: 10vh;
 }
-swiper-slide h2{
-    margin: 0;
-    padding: 0;
-    height: 60px;
+.titulo{
+    padding-left: 40px;
 }
-img{
-    width: 100%;
+p{
+    height: 50px;
+}
+header{
+    height: 90vh;
+    border: 1px solid red;
 }
 swiper-container{
-    width: 100%;
     height: 100%;
 }
-
 swiper-slide{
-    display: flex;
-    flex-direction: column;
     height: 100%;
-    margin-left: 15px;
+    border: 1px solid blue;
+    box-sizing: border-box;
+    padding: 1vw;
+    position: relative;
+}
+.slider-info{
+    height: 100%;
+    padding: 0 3vw;
+    border: 1px solid green;
+}
+button{
+    font-weight: bold;
+    position: absolute;
+    height: 40px;
+    width: 150px;
+    bottom: 3vh;
+    border: 0;
+    color: #fff;
+    background-color: #18437F;
+    border-radius: 25px;
 }
 
-button{
-    width: 200px;
-    height: 45px;
-    border-radius: 25px;
-    bottom: solid;
-    background-color: #18437F;
-    color: white;
-    font-weight: bold;
-    border: 0px;
-    margin-top: 20px;
-}
 button:hover{
     background-color: #AFD0FE;
-    color: #18448F;
+    color: #18437F;
 }
