--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,47 +1,38 @@
 <main>
     <div class="background-image">
-        <img src="/blog/1.jpg" alt="">
+        <img class="imgenfondo" src="/blog/1.jpg" alt="">
     </div>
-    <div class="container">
-        <div class="contenido"><h1>BLOG</h1>
-
-            <swiper-container slides-per-view="0" autoplay="true" speed="300" [slidesPerView]="4.2" pagination="true"  [loop]="true" [loopAdditionalSlides]="0">
+    <h1>BLOG</h1>
+            <swiper-container slides-per-view="1" autoplay="true" speed="400" [slidesPerView]="4"  [loop]="true" [loopAdditionalSlides]="3">
                 <swiper-slide>
                     <img src="/blog/1.jpg" alt="">
                     <p class="date">03/12/2024</p>
                     <h5>INFORMACION PRECISA</h5>
-                    <h5>SEGURIDAD</h5>
                     <button class="orange-button">Más</button>
                 </swiper-slide> 
                 <swiper-slide>
                     <img src="/blog/2.jpg" alt="">
                     <p class="date">03/12/2024</p>
                     <h5>INFORMACION PRECISA</h5>
-                    <h5>INNOVACION</h5>
                     <button class="orange-button">Más</button>
                 </swiper-slide>  
                 <swiper-slide>
                     <img src="/blog/3.jpg" alt="">
                     <p class="date">03/12/2024</p>
                     <h5>INFORMACION PRECISA</h5>
-                    <h5>TRABAJO EN EQUIPO</h5>
                     <button class="orange-button">Más</button>
                 </swiper-slide>
                 <swiper-slide>
                     <img src="/blog/4.jpg" alt="">
                     <p class="date">03/12/2024</p>
                     <h5>INFORMACION PRECISA</h5>
-                    <h5>TRABAJO GRUPAL</h5>
                     <button class="orange-button">Más</button>
                 </swiper-slide> 
                 <swiper-slide>
                     <img src="/blog/5.jpg" alt="">
                     <p class="date">03/12/2024</p>
                     <h5>INFORMACION PRECISA</h5>
-                    <h5>MARKETING</h5>
                     <button class="orange-button">Más</button>
                 </swiper-slide>
             </swiper-container>
-        </div>
-    </div>
 </main>
