grupo preciso avanze alfa 17:41

--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -2,7 +2,9 @@
     <div class="background-image">
         <img class="imgenfondo" src="/blog/1.jpg" alt="">
     </div>
+    <div class="titulo">
     <h1>BLOG</h1>
+    </div>
             <swiper-container slides-per-view="1" autoplay="true" speed="400" [slidesPerView]="4"  [loop]="true" [loopAdditionalSlides]="3">
                 <swiper-slide>
                     <img src="/blog/1.jpg" alt="">
