--- a/src/app/components/galeria/galeria.component.html
+++ b/src/app/components/galeria/galeria.component.html
@@ -1,15 +1,39 @@
 <div class="container-galeria">
-    <h2>GALERIA</h2>
-    <div class="row">
-        <img class="img" src="/galeria/1.jpg" alt="">
-        <img class="img2"src="/galeria/2.jpg" alt="">
-        <img class="img" src="/galeria/3.jpg" alt="">
-        <img class="img2" src="/galeria/4.jpg" alt="">
+  <h2>GALERIA</h2>
+  <div class="row">
+    <div class="imagen">      
+        <div class="fondoimg"></div>
+      <img class="img zoom-in-out" src="/galeria/1.jpg" alt="" />
     </div>
-    <div class="row">
-        <img class="img" src="/galeria/5.jpg" alt="">
-        <img class="img2" src="/galeria/6.jpg" alt="">
-        <img class="img" src="/galeria/7.jpg" alt="">
-        <img class="img2" src="/galeria/8.jpg" alt="">
+    <div class="imagen">
+        <div class="fondoimg2"></div>
+      <img class="img2" src="/galeria/2.jpg" alt="" />
     </div>
+    <div class="imagen">
+        <div class="fondoimg"></div>
+      <img class="img" src="/galeria/3.jpg" alt="" />
+    </div>
+    <div class="imagen">
+        <div class="fondoimg2"></div>
+      <img class="img2" src="/galeria/4.jpg" alt="" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="imagen">
+         <div class="fondoimg"></div>
+      <img class="img" src="/galeria/5.jpg" alt="" />
+    </div>
+    <div class="imagen">
+        <div class="fondoimg2"></div>
+      <img class="img2" src="/galeria/6.jpg" alt="" />
+    </div>
+    <div class="imagen">
+        <div class="fondoimg"></div>
+      <img class="img" src="/galeria/7.jpg" alt="" />
+    </div>
+    <div class="imagen">
+        <div class="fondoimg2"></div>
+      <img class="img2" src="/galeria/8.jpg" alt="" />
+    </div>
+  </div>
 </div>
