--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -8,7 +8,7 @@
             <li class="contacto"> <a  href="inicio#contacto">Contacto</a></li>
             <li class="banderaperu"> <a href=""><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
             <li class="eeuubandera"> <a href=""><img class="imgeeuu"  src="/eeuubandera.png" alt=""></a></li>
-            <li class="whatsapp"> <a href=""><img class="imgwhatsapp" src="/whatsapp.jpg" alt=""></a></li>
+            <li class="whatsapp"> <a href=""><img class="imgwhatsapp" src="/whatsapp.png" alt=""></a></li>
         </ul>
     </nav>
     <header>
@@ -25,6 +25,8 @@
 <app-galeria></app-galeria> 
 <app-blog></app-blog>
 <app-footer id="contacto"></app-footer>
+
+
 
 
 
