--- a/src/app/components/nosotros/nosotros.component.html
+++ b/src/app/components/nosotros/nosotros.component.html
@@ -4,42 +4,39 @@
     <main>
             <div class="contenido">
                 <h2>Nosotros</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quasi corporis architecto asperiores aliquam nemo quo iure omnis laborum dolore nostrum, doloremque odit quis velit nulla est consectetur vitae! Voluptates.</p>
+                <p>Somos Preciso Industry, empresa peruana de alta ingeniería que ofrece soluciones en media y baja tensión, redes, alumbrado y mantenimiento de subestaciones. Con más de 10 años de experiencia, nos especializamos en planificación, diseño y ejecución de proyectos eléctricos, garantizando cumplimiento en alcance, tiempo y costo.</p>
             </div>
             <swiper-container slides-per-view="1" autoplay="true" speed="400" [slidesPerView]="3"  [loop]="true" [loopAdditionalSlides]="3">
                 <swiper-slide>
-                    <img src="/nosotros/innovacion.jpg" alt="">
+                    <img src="/nosotros/seguridad.jpg" alt="">
                     <div class="slider-info">
-                    <h4>SEGURIDAD</h4>
-                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, porro natus. Illum beatae dolor error in ad voluptatem consectetur nesciunt quos Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis provident asperiores pariatur nihil, vitae iusto reiciendis, delectus sed consectetur, corrupti doloribus! Minima incidunt vel quia aut quo vero odit tempora. recusandae officia, cum minus alias magni nemo, quam nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                    <h4>Seguridad</h4>
+                    <p>En nuestro equipo, la salud y la seguridad de nuestros trabajadores, operaciones y clientes son nuestra prioridad. Por eso, nos regimos por los más altos estándares de la industria en nuestra gestión.
+                    </p>
                     </div>
                 </swiper-slide> 
                 <swiper-slide>
-                    <img src="/nosotros/seguridad.jpg" alt="">
+                    <img src="/nosotros/innovacion.jpg" alt="">
                     <div class="slider-info">
-                    <h4>INNOVACION</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                    <h4>Innovación</h4>
+                    <p>Enfocamos nuestros esfuerzos en la mejora continua y la innovación, tanto en la capacitación de nuestro talento humano como en la calidad de nuestros productos. Buscamos la excelencia para obtener la máxima rentabilidad.</p>
                     </div>
                 </swiper-slide>  
                 <swiper-slide>
-                    <img src="/nosotros/trabajoenequipo.jpg" alt="">
-                    <div class="slider-info"><h4>TRABAJO EN EQUIPO</h4>
-                    <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur incidunt laborum nulla vero? Ipsa officiis dolorem placeat, accusantium doloribus rem. Nihil saepe nostrum pariatur, sint quae aliquam minima dolores vitae! ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam illum a velit voluptatum suscipit. Eum veniam culpa optio aperiam ab placeat minus adipisci sequi illo. Atque maxime rerum a laudantium!</p>
+                    <img src="/nosotros/nosotrosfondo.jpg" alt="">
+                    <div class="slider-info">
+                    <h4>Calidad</h4>
+                    <p>Nos comprometemos a brindar calidad y excelencia en cada etapa de nuestros proyectos, asegurando la satisfacción total de nuestros clientes.</p>
                     </div> 
                 </swiper-slide>
                 <swiper-slide>
-                    <img src="/nosotros/innovacion.jpg" alt="">
+                    <img src="/nosotros/trabajoenequipo.jpg" alt="">
                     <div class="slider-info">
-                    <h4>TRABAJO Y SEGURIDAD</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                    <h4>Trabajo en equipo</h4>
+                    <p>Valoramos el trabajo en equipo como motor de éxito fomentando la participación activa para alcanzar metas comunes, promoviendo el intercambio de conocimientos y fortaleciendo la unión de nuestros colaboradores.
+                    </p>
                     </div>
                 </swiper-slide> 
-                <swiper-slide>
-                    <img src="/nosotros/seguridad.jpg" alt="">
-                    <div class="slider-info"> <h4>ANALSIS DE PERSONAL</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
-                    </div>
-                </swiper-slide>
             </swiper-container>
             <div class="boton">
                 <button>Saber mas</button>
