--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,40 +1,35 @@
 <main>
     <h2 class="titulo">NUESTROS SERVICIOS</h2>
     <header>
-        <swiper-container slides-per-view="1" autoplay="true" speed="400" [slidesPerView]="2.4"  [loop]="true" [loopAdditionalSlides]="2">
+        <swiper-container  slides-per-view="1" autoplay="true" speed="400" [slidesPerView]="2.4"  [loop]="true" [loopAdditionalSlides]="2">
             <swiper-slide>
                 <img src="/servicios/1.jpg" alt="">
                 <div class="slider-info">
-                <h2>Instalaciones eléctricas</h2>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, porro natus. Illum beatae dolor error in ad voluptatem consectetur nesciunt quos Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis provident asperiores pariatur nihil, vitae iusto reiciendis, delectus sed consectetur, corrupti doloribus! Minima incidunt vel quia aut quo vero odit tempora. recusandae officia, cum minus alias magni nemo, quam nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                <h2>Sistema de Utilización de Media y Baja Tensión</h2>
+                <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales, comerciales y residenciales.</p>
                 <button>Saber mas</button></div>
             </swiper-slide> 
             <swiper-slide>
                 <img src="/servicios/2.jpg" alt="">
                 <div class="slider-info">
-                <h2>Mantenimiento de tableros eléctricos</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                <h2>Mantenimiento de Subestaciones Eléctricas</h2>
+                <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su óptimo funcionamiento y seguridad.</p>
                 <button>Saber mas</button></div>
             </swiper-slide>  
             <swiper-slide>
                 <img src="/servicios/3.jpg" alt="">
-                <div class="slider-info"><h2>Mantenimiento de carros</h2>
-                <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur incidunt laborum nulla vero? Ipsa officiis dolorem placeat, accusantium doloribus rem. Nihil saepe nostrum pariatur, sint quae aliquam minima dolores vitae! ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam illum a velit voluptatum suscipit. Eum veniam culpa optio aperiam ab placeat minus adipisci sequi illo. Atque maxime rerum a laudantium!</p>
+                <div class="slider-info">
+                <h2>Servicios Eléctricos de Baja Tensión</h2>
+                <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando la eficiencia y confiabilidad de su sistema eléctrico.</p>
                 <button>Saber mas</button></div> 
             </swiper-slide>
             <swiper-slide>
                 <img src="/servicios/4.jpg" alt="">
                 <div class="slider-info">
-                <h2>Mantenimiento de tractores</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
+                <h2>Tendido de Redes</h2>
+                <p>Planificamos, instalamos y mantenemos redes eléctricas para una distribución segura y eficiente de la energía eléctrica.</p>
                 <button>Saber mas</button></div>
             </swiper-slide> 
-            <swiper-slide>
-                <img src="/servicios/5.jpg" alt="">
-                <div class="slider-info"> <h2>Mantenimiento de luz</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum tempus lectus quis facilisis.</p>
-                <button>Saber mas</button></div>
-            </swiper-slide>
         </swiper-container>
     </header>
 </main>
