--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -4,10 +4,10 @@
         <div class="imagenes">
             <div class="subpanel" (mouseenter)="startPreview(consultantsVideo)" (mouseleave)="stopPreview()">
                 <video #consultantsVideo muted autoplay loop>
-                    <source src="/videos/consultants.mp4" type="video/mp4">
+                    <source src="/videos/industry.mp4" type="video/mp4">
                 </video>
                 <div class="subpanel-texto">
-                    <img src="/principal/titulo-sinfondo.png" alt="">
+                    <img src="/principal/Industry.png" alt="">
                     <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
@@ -16,16 +16,16 @@
                     <source src="/videos/express.mp4" type="video/mp4">
                 </video>
                 <div class="subpanel-texto">
-                    <img src="/principal/titulo-sinfondo.png" alt="">
+                    <img src="/principal/Express.png" alt="">
                     <button routerLink="inicio">CONOCE MÁS</button> 
                 </div>
             </div>
             <div class="subpanel" (mouseenter)="startPreview(industryVideo)" (mouseleave)="stopPreview()">
                 <video #industryVideo muted autoplay loop>
-                    <source src="/videos/industry.mp4" type="video/mp4">
+                    <source src="/videos/consultants.mp4" type="video/mp4">
                 </video>
                 <div class="subpanel-texto">
-                    <img src="/principal/titulo-sinfondo.png" alt=""> 
+                    <img src="/principal/Consultants.png" alt=""> 
                     <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
