--- a/src/app/components/galeria/galeria.component.css
+++ b/src/app/components/galeria/galeria.component.css
@@ -33,11 +33,17 @@ h2{
 
 
 img{
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.imagen{
     width: 20%;
     height: 80%;
     border-bottom: 20px solid rgb(0, 0, 0);
-    object-fit: cover;
     box-sizing: border-box;
+    position: relative;
 }
 
 .img{
@@ -50,3 +56,26 @@ img{
     transition: 2000ms;
 }
 
+.fondoimg,.fondoimg2{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.fondoimg2:hover{
+    background-color: rgba(255, 123, 0, 0.247);
+    z-index: 10;
+}
+
+.fondoimg:hover{
+    background-color: rgba(0, 102, 255, 0.247);
+    z-index: 10;
+}
+
+.img:hover,
+.img2:hover {
+  transform: scale(1.1); /* Aumenta el tamaño al 110% */
+  transition: transform 0.5s ease; /* Transición suave */
+}
