--- a/src/app/components/nosotros/nosotros.component.css
+++ b/src/app/components/nosotros/nosotros.component.css
@@ -19,7 +19,7 @@ p,h2,h4{
     color: white;
 }
 swiper-slide p{
-    height: 5em;
+    height: 9em;
 }
 h2{
     height: 1.5em;
@@ -29,7 +29,10 @@ h2{
 h4{
     color: #398cff;
 }
-
+h4{
+    padding-top: 7px;
+    font-variant: small-caps;
+}
 .caja{
     width: 20%;
     height: 100%;
@@ -62,7 +65,7 @@ swiper-slide{
 
 .boton{
     text-align: center;
-    padding: 10vh 0;
+    padding: 5vh 0;
 }
 
 button{
@@ -82,5 +85,5 @@ button:hover{
 
 swiper-container{
     width: 80%;
-    height: auto;
+    height: 70vh;
 }
