--- a/src/app/components/servicios/servicios.component.css
+++ b/src/app/components/servicios/servicios.component.css
@@ -20,6 +20,7 @@ h2{
     display: flex;
     align-items: center;
     height: 10vh;
+    font-variant: small-caps;
 }
 .titulo{
     padding-left: 40px;
