grupo preciso avanze beta 18:01

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -52,11 +52,11 @@
             </ul>
             <ul>
                 <li><strong>Formas de Pago</strong></li>
-                <li><img src="forma_de_pago.png" alt="Formas de Pago"></li>
+                <li><img src="formasdepago.png" alt="Formas de Pago"></li>
             </ul>
             <ul>
                 <li><strong>SIGUENOS</strong></li>
-                <li><img src="redes_sociales.png" alt="Redes Sociales"></li>
+                <li><img src="redessociales.png" alt="Redes Sociales"></li>
             </ul>
         </div>
     </div>
