--- a/src/app/components/galeria/galeria.component.html
+++ b/src/app/components/galeria/galeria.component.html
@@ -1,5 +1,5 @@
 <div class="container-galeria">
-  <h2>GALERIA</h2>
+  <h2>GALERÍA</h2>
   <div class="row">
     <div class="imagen">      
         <div class="fondoimg"></div>
