--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -20,8 +20,20 @@ h1{
     justify-content: center;
     align-items: center;
     padding-left: 50px;
-}
+    color: white;
+    position: absolute;
+    z-index: 50;
 
+}
+.titulo{
+    display: flex;
+    color: white;
+    position: relative;
+    width: 100%;
+    height: 10vh;
+    justify-content: center;
+    align-items: center;
+}
 img{
     width: 100%;
     height: 50vh;
