--- a/src/app/components/galeria/galeria.component.css
+++ b/src/app/components/galeria/galeria.component.css
@@ -13,10 +13,12 @@ h2{
     border: 0;
     padding: 0;
     display: flex;
+    font-size: 35px;
     justify-content: center;
     align-items: center;
     height: 10vh;
     width: 100%;
+    color: #18437F;
 }
 
 .row{
