--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,7 +1,7 @@
 <main>
     <nav>
         <ul>
-            <li class="nosotros"><a href="inicio#nosotros"> Nosotros</a></li>
+            <li class="nosotros"><a href="inicio#nosotros"> Nosotros y HolaMundo</a></li>
             <li class="servicios"> <a href="inicio#servicios">Servicios</a></li>
             <li class="titulo"> <a  href=""><img class="imgtitulo" src="/titulo.png" alt=""></a></li>
             <li class="buscar"> <input  type="text" placeholder="Buscar"></li>
