--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,9 +1,9 @@
-<main>
+<!--<main>
     <nav>
         <ul>
-            <li class="nosotros"><a href="inicio#nosotros"> Nosotros y HolaMundo</a></li>
-            <li class="servicios"> <a href="inicio#servicios">Servicios</a></li>
             <li class="titulo"> <a  href=""><img class="imgtitulo" src="/titulo.png" alt=""></a></li>
+            <li class="nosotros"><a href="inicio#nosotros"> Nosotros</a></li>
+            <li class="servicios"> <a href="inicio#servicios">Servicios</a></li>
             <li class="buscar"> <input  type="text" placeholder="Buscar"></li>
             <li class="contacto"> <a  href="inicio#contacto">Contacto</a></li>
             <li class="banderaperu"> <a href=""><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
@@ -19,12 +19,15 @@
 
 </main>
 
-<app-servicios id="servicios"></app-servicios>
 <app-servicios2></app-servicios2>
 <app-nosotros id="nosotros"></app-nosotros>
 <app-galeria></app-galeria> 
 <app-blog></app-blog>
 <app-footer id="contacto"></app-footer>
+
+-->
+<app-servicios id="servicios"></app-servicios>
+
 
 
 
