--- a/src/app/components/servicios/servicios.component.css
+++ b/src/app/components/servicios/servicios.component.css
@@ -1,66 +1,9 @@
-main{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-img{
-    width: 100%;
-
-}
-h2, p{
+h2,p{
     margin: 0;
-    padding: 0;
-    border:0;
-    overflow: auto;
-}
-h2{
-    display: flex;
-    align-items: center;
-    height: 10vh;
-    text-transform: uppercase;
-}
-.titulo{
-    padding-left: 40px;
-}
-p{
-    height: 50px;
-}
-header{
-    height: 90vh;
-}
-swiper-container{
-    height: 100%;
-}
-swiper-slide{
-    height: 100%;
-    box-sizing: border-box;
-    padding: 1vw;
-    position: relative;
-}
-.slider-info{
-    height: 100%;
-    padding: 0 3vw;
-}
-button{
-    font-weight: bold;
-    height: 40px;
-    width: 150px;
-    margin-top: 5vh;
     border: 0;
-    color: #fff;
-    background-color: #18437F;
-    border-radius: 25px;
+    padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-button:hover{
-    background-color: #AFD0FE;
-    color: #18437F;
-}
-
-@media (max-width: 800px) {
-
-    
+img{
+    width: 250px;
 }
