--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -1,4 +1,5 @@
-ul{
+/* Estilos generales */
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -7,29 +8,36 @@ ul{
     font-weight: bold;
 }
 
-img{
+img {
     width: 10%;
 }
-li{
+
+li {
     height: 80px;
-    border-right: 3px solid #18437F68;
+    border-right: 3px solid #002150;
+    position: relative; /* Necesario para el pseudo-elemento */
 }
-.nosotros, .servicios, .contacto{
+
+.nosotros, .servicios, .contacto {
     width: 8%;
 }
-.titulo{
+
+.titulo {
     width: 18%;
 }
-.titulo a{
+
+.titulo a {
     margin: 0 30px;
 }
-.buscar{
+
+.buscar {
     width: 46%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.banderaperu, .eeuubandera, .whatsapp{
+
+.banderaperu, .eeuubandera, .whatsapp {
     width: 4%;
 }
 
@@ -37,17 +45,20 @@ li{
     width: 20px;
     height: 15px;
 }
-.whatsapp a img{
+
+.whatsapp a img {
     width: 25px;
     height: 25px;
 }
-input{
+
+input {
     width: 90%;
     height: 30px;
     border-radius: 25px;
     border: 1px solid gray;
 }
-a{
+
+a {
     display: flex;
     height: 100%;
     align-items: center;
@@ -55,36 +66,56 @@ a{
     color: black;
     text-decoration: none;
     transition: 500ms;
+    position: relative; /* Necesario para el pseudo-elemento */
+}
+
+/* Estilos del pseudo-elemento */
+a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px; /* Altura de la barra */
+    width: 0; /* Ancho inicial de la barra */
+    background-color: black; /* Color de la barra */
+    transition: width 0.5s ease-out; /* Transición */
+}
+
+/* Cambios en hover */
+a:hover::after {
+    width: 100%; /* Ancho de la barra en hover */
 }
 a:hover{
-    background-color: #18437F;
+    background-color: #002150;
     color: white;
 }
-header .fondo{
+header .fondo {
     width: 100%;
-    height:100%;
+    height: 100%;
     object-fit: cover;
 }
-li a img{
+
+li a img {
     width: 100%;
     height: auto;
 }
 
-header{
+header {
     width: 100%;
     position: relative;
     height: calc(100vh - 80px);
 }
-header img{
+
+header img {
     position: absolute;
 }
 
-header .transparencia{
+header .transparencia {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 10;
-    background-color: #18437f62;
+    background-color: #14141460;
 }
 
 header .titulo-2 {
@@ -96,45 +127,54 @@ header .titulo-2 {
 }
 
 @media (max-width: 800px) {
-    ul{
+    ul {
         flex-direction: column;
     }
-    nav{
+
+    nav {
         width: 100%;
     }
-    .nosotros, .servicios,.titulo,.buscar,.contacto,.banderaperu,.eeuubandera{
+
+    .nosotros, .servicios, .titulo, .buscar, .contacto, .banderaperu, .eeuubandera {
         width: 100%;
     }
-    .titulo a img{
+
+    .titulo a img {
         height: 100%;
         object-fit: contain;
     }
-    .titulo{
+
+    .titulo {
         order: 0;
     }
-    .nosotros{
+
+    .nosotros {
         order: 1;
     }
-    .contacto{
+
+    .contacto {
         order: 3;
     }
-    .banderaperu{
+
+    .banderaperu {
         order: 5;
     }
-    .eeuubandera{
+
+    .eeuubandera {
         order: 6;
     }
-    .servicios{
+
+    .servicios {
         order: 2;
     }
-    .whatsapp{
+
+    .whatsapp {
         width: 100%;
         order: 4;
     }
 
-    .whatsapp a img{
+    .whatsapp a img {
         height: 50%;
         object-fit: contain;
     }
 }
-
