--- a/src/app/components/servicios/servicios.component.css
+++ b/src/app/components/servicios/servicios.component.css
@@ -1,9 +1,11 @@
-h2,p{
-    margin: 0;
-    border: 0;
-    padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.swiper-principal{
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 20px;
+}
+swiper-container{
+    width: 50%;
 }
 img{
-    width: 250px;
+    width: 100%;
 }
